--- a/index.html
+++ b/index.html
@@ -185,84 +185,7 @@
           <a href="mailto:your.email@example.com" class="btn btn-primary">Email Me</a>
       </div>
   </div>
-</section>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Navigation</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* Custom styles for the navigation bar */
-        nav.navbar {
-            background-color: #343a40; /* Dark background */
-            z-index: 1030; /* Ensure it stays on top of other elements */
-        }
-        nav.navbar a {
-            color: #ffffff; /* White text */
-        }
-        nav.navbar a:hover {
-            color: #007bff; /* Highlight on hover */
-        }
-        html {
-            scroll-behavior: smooth; /* Enables smooth scrolling */
-        }
-    </style>
-</head>
-<body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">My Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Placeholder Sections -->
-    <section id="home" style="height: 100vh; background-color: #f8f9fa; display: flex; align-items: center; justify-content: center;">
-        <h1>Welcome to My Portfolio</h1>
-    </section>
-    <section id="about" style="height: 100vh; background-color: #e9ecef; display: flex; align-items: center; justify-content: center;">
-        <h1>About Me</h1>
-    </section>
-    <section id="projects" style="height: 100vh; background-color: #dee2e6; display: flex; align-items: center; justify-content: center;">
-        <h1>Projects</h1>
-    </section>
-    <section id="skills" style="height: 100vh; background-color: #ced4da; display: flex; align-items: center; justify-content: center;">
-        <h1>Skills</h1>
-    </section>
-    <section id="contact" style="height: 100vh; background-color: #adb5bd; display: flex; align-items: center; justify-content: center;">
-        <h1>Contact Me</h1>
-    </section>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
-
+it</section>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
