Add achievements section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,21 @@
                 <div class="col-md-7">
                     <h2 class="fw-bold">About Me</h2>
                     <p class="text-muted">
-                        Welcome! I'm [Your Name], a [Your Profession or Specialty]. I'm passionate about creating, learning, and solving problems in the fields of [Your Industry or Interests]. This portfolio showcases my journey, achievements, and creative endeavors.
+                        Welcome! I'm Monica Souza, a Engineer with DevOps, Data Analytics, and Business background. 
+                        I'm passionate about creating, learning, and solving problems in the fields of 
+                        [Your Industry or Interests]. This portfolio showcases my journey, achievements, and creative endeavors.
                     </p>
                     <p>
-                        With over [X years] of experience in [specific skills/fields], I specialize in delivering impactful solutions that drive success. Whether it’s [specific tasks you excel in], I’m here to make a difference.
+                        Experienced Engineer with a background in DevOps, data analytics, supply chain
+                        management, and retail customer service. My strategic data analysis expertise includes
+                        identifying trends, optimizing inventory levels, and aligning demand forecasts with
+                        business objectives. I have also provided valuable insights to support strategic
+                        decision-making and collaborated with various departments to align financial
+                        strategies. With a strong software development, product development, and production
+                        engineering foundation, I bring a unique blend of technical and business acumen to drive
+                        continuous improvement. I specialize in delivering impactful solutions that 
+                        drive success. I am eager to leverage my diverse skill set built in more than
+                        15 years of experience in a new position.
                     </p>
                     <a href="#projects" class="btn btn-primary">Explore My Work</a>
                 </div>
@@ -51,50 +62,68 @@
     <!-- Projects Section -->
 <section id="projects" class="py-5 bg-light">
   <div class="container">
-      <h2 class="fw-bold text-center mb-5">My Projects</h2>
+      <h2 class="fw-bold text-center mb-5">My Achievements</h2>
       <div class="row g-4">
           <!-- Project 1 -->
           <div class="col-md-4">
               <div class="card h-100 shadow-sm">
-                  <img src="images/projects/1.jpg" class="card-img-top" alt="Project 1">
+                  <img src="images/projects/ach1.png" class="card-img-top" alt="Project 1">
                   <div class="card-body">
-                      <h5 class="card-title">Project Title 1</h5>
+                      <h5 class="card-title">Software Requeriments</h5>
                       <p class="card-text">
-                          Brief description of Project 1. Highlight key features, tools used, and any other relevant information.
+                        Worked together with the engineering team to define software requirements and
+                        data flow between departments for an internal ERP system design.
                       </p>
-                  </div>
-                  <div class="card-footer text-center">
-                      <a href="#" class="btn btn-primary">View Details</a>
                   </div>
               </div>
           </div>
           <!-- Project 2 -->
           <div class="col-md-4">
               <div class="card h-100 shadow-sm">
-                  <img src="images/projects/2.jpg" class="card-img-top" alt="Project 2">
+                  <img src="images/projects/ach2.png" class="card-img-top" alt="Project 2">
                   <div class="card-body">
-                      <h5 class="card-title">Project Title 2</h5>
+                      <h5 class="card-title">Employee Training</h5>
                       <p class="card-text">
-                          Brief description of Project 2. Highlight key features, tools used, and any other relevant information.
+                        Implemented employee training and process on how to identify false Euro bills and
+                        how to handle the occurrence.
                       </p>
-                  </div>
-                  <div class="card-footer text-center">
-                      <a href="#" class="btn btn-primary">View Details</a>
                   </div>
               </div>
           </div>
           <!-- Project 3 -->
           <div class="col-md-4">
+            <div class="card h-100 shadow-sm">
+                <img src="images/projects/ach3.png" class="card-img-top" alt="Project 3">
+                <div class="card-body">
+                    <h5 class="card-title">Budget Management</h5>
+                    <p class="card-text">
+                        Successfully created and managed the supply chain regional budget (USD 2MM)
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Project 4 -->
+        <div class="col-md-4">
+            <div class="card h-100 shadow-sm">
+                <img src="images/projects/ach4.png" class="card-img-top" alt="Project 4">
+                <div class="card-body">
+                    <h5 class="card-title">Process Owner</h5>
+                    <p class="card-text">
+                        Process owner of the supply chain KPI program.
+                    </p>
+                </div>
+            </div>
+        </div>
+          <!-- Project 5 -->
+          <div class="col-md-4">
               <div class="card h-100 shadow-sm">
-                  <img src="images/projects/3.jpg" class="card-img-top" alt="Project 3">
+                  <img src="images/projects/ach5.webp" class="card-img-top" alt="Project 5">
                   <div class="card-body">
-                      <h5 class="card-title">Project Title 3</h5>
+                      <h5 class="card-title">Project Management</h5>
                       <p class="card-text">
-                          Brief description of Project 3. Highlight key features, tools used, and any other relevant information.
+                        Wrote a project plan - based on the PMBOK 2014 - that was awarded honors grade
+                        and handed to the university to be implemented (Bachelor project)
                       </p>
-                  </div>
-                  <div class="card-footer text-center">
-                      <a href="#" class="btn btn-primary">View Details</a>
                   </div>
               </div>
           </div>
