Change contact address

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <!-- Project 1 -->
           <div class="col-md-4">
               <div class="card h-100 shadow-sm">
-                  <img src="images/projects/ach1.png" class="card-img-top" alt="Project 1">
+                  <img src="images/projects/ach1.png" class="card-img-top" alt="Project 1" width="250" height="250">
                   <div class="card-body">
                       <h5 class="card-title">Software Requeriments</h5>
                       <p class="card-text">
@@ -80,7 +80,7 @@
           <!-- Project 2 -->
           <div class="col-md-4">
               <div class="card h-100 shadow-sm">
-                  <img src="images/projects/ach2.png" class="card-img-top" alt="Project 2">
+                  <img src="images/projects/ach2.png" class="card-img-top" alt="Project 2" width="250" height="250">
                   <div class="card-body">
                       <h5 class="card-title">Employee Training</h5>
                       <p class="card-text">
@@ -93,11 +93,11 @@
           <!-- Project 3 -->
           <div class="col-md-4">
             <div class="card h-100 shadow-sm">
-                <img src="images/projects/ach3.png" class="card-img-top" alt="Project 3">
+                <img src="images/projects/ach3.png" class="card-img-top" alt="Project 3" width="250" height="250">
                 <div class="card-body">
                     <h5 class="card-title">Budget Management</h5>
                     <p class="card-text">
-                        Successfully created and managed the supply chain regional budget (USD 2MM)
+                        Successfully created and managed the supply chain regional budget (USD $2MM).
                     </p>
                 </div>
             </div>
@@ -105,7 +105,7 @@
         <!-- Project 4 -->
         <div class="col-md-4">
             <div class="card h-100 shadow-sm">
-                <img src="images/projects/ach4.png" class="card-img-top" alt="Project 4">
+                <img src="images/projects/ach4.png" class="card-img-top" alt="Project 4" width="250" height="250">
                 <div class="card-body">
                     <h5 class="card-title">Process Owner</h5>
                     <p class="card-text">
@@ -117,12 +117,12 @@
           <!-- Project 5 -->
           <div class="col-md-4">
               <div class="card h-100 shadow-sm">
-                  <img src="images/projects/ach5.webp" class="card-img-top" alt="Project 5">
+                  <img src="images/projects/ach6.png" class="card-img-top" alt="Project 5" width="250" height="250">
                   <div class="card-body">
                       <h5 class="card-title">Project Management</h5>
                       <p class="card-text">
                         Wrote a project plan - based on the PMBOK 2014 - that was awarded honors grade
-                        and handed to the university to be implemented (Bachelor project)
+                        and handed to the university to be implemented (Bachelor project).
                       </p>
                   </div>
               </div>
@@ -180,38 +180,20 @@
       <div class="row justify-content-center text-center">
           <!-- Social Media Icons -->
           <div class="col-md-2 mb-3">
-              <a href="https://www.linkedin.com" target="_blank">
+              <a href="https://www.linkedin.com/in/monicasds/" target="_blank">
                   <img src="icons/linkedin.png" alt="LinkedIn" class="img-fluid mb-2" style="max-width: 50px;">
               </a>
               <p class="text-muted">LinkedIn</p>
           </div>
           <div class="col-md-2 mb-3">
-              <a href="https://twitter.com" target="_blank">
-                  <img src="icons/twitter.png" alt="Twitter" class="img-fluid mb-2" style="max-width: 50px;">
-              </a>
-              <p class="text-muted">Twitter</p>
-          </div>
-          <div class="col-md-2 mb-3">
-              <a href="https://github.com" target="_blank">
+              <a href="https://github.com/sdsmoni/sdsmoni.github.io" target="_blank">
                   <img src="icons/github.png" alt="GitHub" class="img-fluid mb-2" style="max-width: 50px;">
               </a>
               <p class="text-muted">GitHub</p>
           </div>
-          <div class="col-md-2 mb-3">
-              <a href="https://medium.com" target="_blank">
-                  <img src="icons/medium.png" alt="Medium" class="img-fluid mb-2" style="max-width: 50px;">
-              </a>
-              <p class="text-muted">Medium</p>
-          </div>
-          <div class="col-md-2 mb-3">
-              <a href="https://www.youtube.com" target="_blank">
-                  <img src="icons/youtube.png" alt="YouTube" class="img-fluid mb-2" style="max-width: 50px;">
-              </a>
-              <p class="text-muted">YouTube</p>
-          </div>
       </div>
       <div class="text-center mt-4">
-          <a href="mailto:your.email@example.com" class="btn btn-primary">Email Me</a>
+          <a href="mailto:sds.moni@gmail.com" class="btn btn-primary">Email Me</a>
       </div>
   </div>
 it</section>
