Change contact section

--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
             <div class="row align-items-center">
                 <!-- Profile Picture -->
                 <div class="col-md-5 text-center mb-4 mb-md-0">
-                    <img src="images/about/1.jpg" alt="Profile Picture" class="img-fluid rounded-circle" width="50%" height="50%">
+                    <img src="images/about/CVpeb.jpg" alt="Profile Picture" class="img-fluid rounded-circle" width="50%" height="50%">
+                    <h1 class="fw-bold">Monica Souza</h1>
                 </div>
                 <!-- About Content -->
                 <div class="col-md-7">
                     <h2 class="fw-bold">About Me</h2>
                     <p class="text-muted">
-                        Welcome! I'm Monica Souza, a Engineer with DevOps, Data Analytics, and Business background. 
-                        I'm passionate about creating, learning, and solving problems in the fields of 
-                        [Your Industry or Interests]. This portfolio showcases my journey, achievements, and creative endeavors.
+                        Welcome! I am an Engineer with DevOps, Data Analytics, and Business background. 
+                        I'm passionate about creating, learning, and solving problems. 
+                        This page showcases my skills, achievements, and creative endeavors.
                     </p>
                     <p>
                         Experienced Engineer with a background in DevOps, data analytics, supply chain
@@ -194,6 +195,8 @@
       </div>
       <div class="text-center mt-4">
           <a href="mailto:sds.moni@gmail.com" class="btn btn-primary">Email Me</a>
+          <a href="files/Monica_Souza_-_Engineer_with_DevOps,_Data_Analytics,_and_Business_Background.pdf" class="btn btn-primary" 
+          target="_blank">Resume</a>
       </div>
   </div>
 it</section>
