Change contact me button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
         }
         .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
+            background-color: #9a47ae;
+            border-color: #9a47ae;
         }
     </style>
 </head>
@@ -43,19 +43,6 @@
                         I'm passionate about creating, learning, and solving problems. 
                         This page showcases my skills, achievements, and creative endeavors.
                     </p>
-                    <p>
-                        Experienced Engineer with a background in DevOps, data analytics, supply chain
-                        management, and retail customer service. My strategic data analysis expertise includes
-                        identifying trends, optimizing inventory levels, and aligning demand forecasts with
-                        business objectives. I have also provided valuable insights to support strategic
-                        decision-making and collaborated with various departments to align financial
-                        strategies. With a strong software development, product development, and production
-                        engineering foundation, I bring a unique blend of technical and business acumen to drive
-                        continuous improvement. I specialize in delivering impactful solutions that 
-                        drive success. I am eager to leverage my diverse skill set built in more than
-                        15 years of experience in a new position.
-                    </p>
-                    <a href="#projects" class="btn btn-primary">Explore My Work</a>
                 </div>
             </div>
         </div>
