--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                         I'm passionate about creating, learning, and solving problems. 
                         This page showcases my skills, achievements, and creative endeavors.
                     </p>
+                    <p>
+                        With more than 15 years of experience in software development, sales, customer service, business 
+                        and data analysis, I specialize in delivering impactful solutions that drive success. 
+                        Whether it is [describe specific tasks you excel in], I am here to make a difference.
+                    </p>
                 </div>
             </div>
         </div>
@@ -126,35 +131,31 @@
           <!-- Skill 1 -->
           <div class="col-md-3">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/skills/1.png" alt="Skill 1" class="img-fluid mb-3" style="max-width: 80px;">
-                  <h5>Skill Name 1</h5>
-                  <p class="text-muted">Brief description of Skill 1.</p>
+                  <img src="images/skills/1.png" alt="Skill 1" class="img-fluid mb-3" style="max-width: 100px;">
+                  <h5>Python</h5>
               </div>
           </div>
           <!-- Skill 2 -->
           <div class="col-md-3">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/skills/2.png" alt="Skill 2" class="img-fluid mb-3" style="max-width: 80px;">
-                  <h5>Skill Name 2</h5>
-                  <p class="text-muted">Brief description of Skill 2.</p>
+                  <img src="images/skills/2.png" alt="Skill 2" class="img-fluid mb-3" style="max-width: 100px;">
+                  <h5>Data Science</h5>
               </div>
           </div>
           <!-- Skill 3 -->
           <div class="col-md-3">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/skills/3.png" alt="Skill 3" class="img-fluid mb-3" style="max-width: 80px;">
-                  <h5>Skill Name 3</h5>
-                  <p class="text-muted">Brief description of Skill 3.</p>
+                  <img src="images/skills/3.png" alt="Skill 3" class="img-fluid mb-3" style="max-width: 100px;">
+                  <h5>My SQL</h5>
               </div>
           </div>
           <!-- Skill 4 -->
           <div class="col-md-3">
-              <div class="p-4 border rounded shadow-sm">
-                  <img src="images/skills/4.png" alt="Skill 4" class="img-fluid mb-3" style="max-width: 80px;">
-                  <h5>Skill Name 4</h5>
-                  <p class="text-muted">Brief description of Skill 4.</p>
-              </div>
-          </div>
+            <div class="p-4 border rounded shadow-sm">
+                <img src="icons/azure.png" alt="Skill 4" class="img-fluid mb-3" style="max-width: 100px;">
+                <h5>Azure Certified</h5>
+            </div>
+        </div>
       </div>
   </div>
 </section>
