--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         I'm passionate about creating, learning, and solving problems. 
                         This page showcases my skills, achievements, and creative endeavors.
                     </p>
-                    <p>
+                    <p class="btn-primary">
                         With more than 15 years of experience in software development, sales, customer service, business 
                         and data analysis, I specialize in delivering impactful solutions that drive success. 
                         Whether it is [describe specific tasks you excel in], I am here to make a difference.
@@ -183,11 +183,11 @@
       </div>
       <div class="text-center mt-4">
           <a href="mailto:sds.moni@gmail.com" class="btn btn-primary">Email Me</a>
-          <a href="files/Monica_Souza_-_Engineer_with_DevOps,_Data_Analytics,_and_Business_Background.pdf" class="btn btn-primary" 
+          <a href="files/Monica_Souza_CV_Dec24_V.pdf" class="btn btn-primary" 
           target="_blank">Resume</a>
       </div>
   </div>
-it</section>
+</section>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
