--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
                         I'm passionate about creating, learning, and solving problems. 
                         This page showcases my skills, achievements, and creative endeavors.
                     </p>
-                    <p class="btn-primary">
+                    <p>
                         With more than 15 years of experience in software development, sales, customer service, business 
-                        and data analysis, I specialize in delivering impactful solutions that drive success. 
-                        Whether it is [describe specific tasks you excel in], I am here to make a difference.
+                        and data analysis, I specialize in delivering impactful solutions that drive success.
                     </p>
                 </div>
             </div>
@@ -56,11 +55,11 @@
 <section id="projects" class="py-5 bg-light">
   <div class="container">
       <h2 class="fw-bold text-center mb-5">My Achievements</h2>
-      <div class="row g-4">
+      <div class="row g-4 text-center">
           <!-- Project 1 -->
           <div class="col-md-4">
-              <div class="card h-100 shadow-sm">
-                  <img src="images/projects/ach1.png" class="card-img-top" alt="Project 1" width="250" height="250">
+              <div class="p-4 border rounded shadow-sm">
+                  <img src="images/projects/ach1.png" class="img-fluid mb-3" style="max-width: 200px">
                   <div class="card-body">
                       <h5 class="card-title">Software Requeriments</h5>
                       <p class="card-text">
@@ -72,8 +71,8 @@
           </div>
           <!-- Project 2 -->
           <div class="col-md-4">
-              <div class="card h-100 shadow-sm">
-                  <img src="images/projects/ach2.png" class="card-img-top" alt="Project 2" width="250" height="250">
+              <div class="p-4 border rounded shadow-sm">
+                  <img src="images/projects/ach2.png" class="img-fluid mb-3" style="max-width: 200px">
                   <div class="card-body">
                       <h5 class="card-title">Employee Training</h5>
                       <p class="card-text">
@@ -85,8 +84,8 @@
           </div>
           <!-- Project 3 -->
           <div class="col-md-4">
-            <div class="card h-100 shadow-sm">
-                <img src="images/projects/ach3.png" class="card-img-top" alt="Project 3" width="250" height="250">
+            <div class="p-4 border rounded shadow-sm">
+                <img src="images/projects/ach3.png" class="card-img-top" alt="Project 3"  style="max-width: 200px">
                 <div class="card-body">
                     <h5 class="card-title">Budget Management</h5>
                     <p class="card-text">
@@ -97,8 +96,8 @@
         </div>
         <!-- Project 4 -->
         <div class="col-md-4">
-            <div class="card h-100 shadow-sm">
-                <img src="images/projects/ach4.png" class="card-img-top" alt="Project 4" width="250" height="250">
+            <div class="p-4 border rounded shadow-sm">
+                <img src="images/projects/ach4.png" class="card-img-top" alt="Project 4"  style="max-width: 200px">
                 <div class="card-body">
                     <h5 class="card-title">Process Owner</h5>
                     <p class="card-text">
@@ -109,8 +108,8 @@
         </div>
           <!-- Project 5 -->
           <div class="col-md-4">
-              <div class="card h-100 shadow-sm">
-                  <img src="images/projects/ach6.png" class="card-img-top" alt="Project 5" width="250" height="250">
+              <div class="p-4 border rounded shadow-sm">
+                  <img src="images/projects/ach6.png" class="card-img-top" alt="Project 5"  style="max-width: 200px">
                   <div class="card-body">
                       <h5 class="card-title">Project Management</h5>
                       <p class="card-text">
@@ -183,8 +182,8 @@
       </div>
       <div class="text-center mt-4">
           <a href="mailto:sds.moni@gmail.com" class="btn btn-primary">Email Me</a>
-          <a href="files/Monica_Souza_CV_Dec24_V.pdf" class="btn btn-primary" 
-          target="_blank">Resume</a>
+          <a href="files/Stud_Monica_Souza_Dec24.pdf" class="btn btn-primary" 
+          target="_blank">Curriculum Vitae</a>
       </div>
   </div>
 </section>
