--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
   <div class="container">
       <h2 class="fw-bold text-center mb-5">My Achievements</h2>
       <div class="row g-4 text-center">
+        <!-- Project 6 -->
+        <div class="col-md-4">
+            <div class="p-4 border rounded shadow-sm">
+                <img src="images/projects/aura.png" class="img-fluid mb-3" style="max-width: 125px">
+                <div class="card-body">
+                    <h5 class="card-title">Innovation & Product Development</h5>
+                    <p class="card-text">
+                        Awarded a trip to visit Peugeot's R&D HQ in Paris as the best semester project at Kobenhavns Erhvervsakademi (KEA) 
+                        in partnership with Embraer and Peugeot. Title: Green Cabin Concept Project - Interactive Cabin and Layout Design. 
+                    </p>
+                </div>
+            </div>
+        </div>
           <!-- Project 1 -->
           <div class="col-md-4">
               <div class="p-4 border rounded shadow-sm">
