--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <!-- Project 1 -->
           <div class="col-md-4">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/projects/ach1.png" class="img-fluid mb-3" style="max-width: 200px">
+                  <img src="images/projects/ach1.png" class="img-fluid mb-3" style="max-width: 230px">
                   <div class="card-body">
                       <h5 class="card-title">Software Requeriments</h5>
                       <p class="card-text">
@@ -85,7 +85,7 @@
           <!-- Project 2 -->
           <div class="col-md-4">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/projects/ach2.png" class="img-fluid mb-3" style="max-width: 200px">
+                  <img src="images/projects/ach2.png" class="img-fluid mb-3" style="max-width: 240px">
                   <div class="card-body">
                       <h5 class="card-title">Employee Training</h5>
                       <p class="card-text">
@@ -110,7 +110,7 @@
         <!-- Project 4 -->
         <div class="col-md-4">
             <div class="p-4 border rounded shadow-sm">
-                <img src="images/projects/ach4.png" class="card-img-top" alt="Project 4"  style="max-width: 200px">
+                <img src="images/projects/ach4.png" class="card-img-top" alt="Project 4"  style="max-width: 280px">
                 <div class="card-body">
                     <h5 class="card-title">Process Owner</h5>
                     <p class="card-text">
@@ -143,28 +143,56 @@
           <!-- Skill 1 -->
           <div class="col-md-3">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/skills/1.png" alt="Skill 1" class="img-fluid mb-3" style="max-width: 100px;">
+                  <img src="images/skills/1.png" alt="Skill 1" class="img-fluid mb-3" style="max-width: 80px;">
                   <h5>Python</h5>
               </div>
           </div>
           <!-- Skill 2 -->
           <div class="col-md-3">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/skills/2.png" alt="Skill 2" class="img-fluid mb-3" style="max-width: 100px;">
+                  <img src="images/skills/2.png" alt="Skill 2" class="img-fluid mb-3" style="max-width: 80px;">
                   <h5>Data Science</h5>
               </div>
           </div>
           <!-- Skill 3 -->
           <div class="col-md-3">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/skills/3.png" alt="Skill 3" class="img-fluid mb-3" style="max-width: 100px;">
+                  <img src="images/skills/3.png" alt="Skill 3" class="img-fluid mb-3" style="max-width: 80px;">
                   <h5>My SQL</h5>
               </div>
           </div>
+          <!-- Skill 5 -->
+          <div class="col-md-3">
+            <div class="p-4 border rounded shadow-sm">
+                <img src="icons/gitlab.png" alt="Skill 3" class="img-fluid mb-3" style="max-width: 80px;">
+                <h5>Gitlab</h5>
+            </div>
+        </div>
+        <!-- Skill 6 -->
+        <div class="col-md-3">
+            <div class="p-4 border rounded shadow-sm">
+                <img src="icons/excel.png" alt="Skill 3" class="img-fluid mb-3" style="max-width: 85px;">
+                <h5>Advanced Excel</h5>
+            </div>
+        </div>
+        <!-- Skill 7 -->
+        <div class="col-md-3">
+            <div class="p-4 border rounded shadow-sm">
+                <img src="icons/jenkins.jpg" alt="Skill 3" class="img-fluid mb-3" style="max-width: 80px;">
+                <h5>Jenkins</h5>
+            </div>
+        </div>
+        <!-- Skill 8 -->
+        <div class="col-md-3">
+            <div class="p-4 border rounded shadow-sm">
+                <img src="icons/ansible.png" alt="Skill 3" class="img-fluid mb-3" style="max-width: 210px;">
+                <h5>Ansible</h5>
+            </div>
+        </div>
           <!-- Skill 4 -->
           <div class="col-md-3">
             <div class="p-4 border rounded shadow-sm">
-                <img src="icons/azure.png" alt="Skill 4" class="img-fluid mb-3" style="max-width: 100px;">
+                <img src="icons/azure.png" alt="Skill 4" class="img-fluid mb-3" style="max-width: 80px;">
                 <h5>Azure Certified</h5>
             </div>
         </div>
