Change kea's pic

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <!-- Project 6 -->
         <div class="col-md-4">
             <div class="p-4 border rounded shadow-sm">
-                <img src="images/projects/aura.png" class="img-fluid mb-3" style="max-width: 125px">
+                <img src="images/projects/KEA.jpg" class="img-fluid mb-3" style="max-width: 160px">
                 <div class="card-body">
                     <h5 class="card-title">Innovation & Product Development</h5>
                     <p class="card-text">
-                        Awarded a trip to visit Peugeot's R&D HQ in Paris as the best semester project at Kobenhavns Erhvervsakademi (KEA) 
+                        Awarded a trip to visit Peugeot's R&D HQ in Paris as the best semester project at Kobenhavns Erhvervsakademi
                         in partnership with Embraer and Peugeot. Title: Green Cabin Concept Project - Interactive Cabin and Layout Design. 
                     </p>
                 </div>
