--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
           <!-- Skill 2 -->
           <div class="col-md-3">
               <div class="p-4 border rounded shadow-sm">
-                  <img src="images/skills/2.png" alt="Skill 2" class="img-fluid mb-3" style="max-width: 80px;">
-                  <h5>Data Science</h5>
+                  <img src="icons/snow.png" alt="Skill 2" class="img-fluid mb-3" style="max-width: 80px;">
+                  <h5>Snowflake</h5>
               </div>
           </div>
           <!-- Skill 3 -->
